2021-08-18  Chris Dumez  <cdumez@apple.com>

        Implement Crypto.randomUUID()
        https://bugs.webkit.org/show_bug.cgi?id=229240

        Reviewed by Geoffrey Garen.

        Rebaseline WPT tests that are now passing.

        * web-platform-tests/WebCryptoAPI/randomUUID.https.any-expected.txt:
        * web-platform-tests/WebCryptoAPI/randomUUID.https.any.worker-expected.txt:

2021-08-18  Martin Robinson  <mrobinson@webkit.org>

        [css-scroll-snap] Don't snap to offscreen snap areas in unidirectional scrolls
        https://bugs.webkit.org/show_bug.cgi?id=227949
        <rdar://problem/80895783>

        Reviewed by Frédéric Wang.

        * web-platform-tests/css/css-scroll-snap/snap-to-visible-areas-both-expected.txt: This bidirectional
        scrolling test no longer snaps because we don't have support for choosing between two candidates
        properly yet.
        * web-platform-tests/css/css-scroll-snap/snap-to-visible-areas-x-axis-expected.txt: Updated to show newly passing test.
        * web-platform-tests/css/css-scroll-snap/snap-to-visible-areas-y-axis-expected.txt: Ditto.

2021-08-17  Alex Christensen  <achristensen@webkit.org>

        Document load events should update timing in PerformanceNavigationTiming even after its instantiation
        https://bugs.webkit.org/show_bug.cgi?id=229181

        Reviewed by Chris Dumez.

        * web-platform-tests/navigation-timing/nav2_test_attributes_values-expected.txt:

2021-08-17  Alex Christensen  <achristensen@webkit.org>

        Remove unused test expectation file

        * web-platform-tests/resource-timing/idlharness-expected.txt: Removed.

2021-08-16  Johnson Zhou  <qiaosong_zhou@apple.com>

        Imported CSS Typed OM from w3c
        https://bugs.webkit.org/show_bug.cgi?id=229177

        Reviewed by Alex Christensen.

        * web-platform-tests/css/css-typed-om/CSSMatrixComponent-DOMMatrix-mutable-expected.txt: Added.