@@ -46,7 +46,6 @@ public:
     virtual ~Crypto();
 
     ExceptionOr<void> getRandomValues(JSC::ArrayBufferView&);
-    String randomUUID() const;
 
 #if ENABLE(WEB_CRYPTO)
     SubtleCrypto& subtle();
